--- a/main.html
+++ b/main.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+	<!DOCTYPE html>
 
 <html>
 
@@ -8,13 +9,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<nav>
-	<ul>
-         <li><a href="#">Home</a></li>
-		 <li><a href="#">About</a></li>
-		 <li><a href="#">Contact Us</a></li>
-		 <li><a href="#">Itinerary</a></li>
-    </ul>
+	<nav class="container">
+		<ul>
+			<li>Home</li>
+			<li>About</li>
+			<li>Contact Us</li>
+			<li>Itinrary</li>
+		</ul>
 	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
